--- a/package.json
+++ b/package.json
@@ -1,23 +1,25 @@
 {
-  "name": "ChooseColorNuxt",
-  "version": "1.0.0",
-  "private": true,
-  "scripts": {
-    "dev": "nuxt",
-    "build": "nuxt build",
-    "start": "nuxt start",
-    "generate": "nuxt generate",
-    "test": "jest"
-  },
-  "dependencies": {
-    "core-js": "^3.15.1",
-    "nuxt": "^2.15.7"
-  },
-  "devDependencies": {
-    "@vue/test-utils": "^1.2.1",
-    "babel-core": "7.0.0-bridge.0",
-    "babel-jest": "^27.0.5",
-    "jest": "^27.0.5",
-    "vue-jest": "^3.0.4"
-  }
+    "name": "ChooseColorNuxt",
+    "version": "1.0.0",
+    "private": true,
+    "scripts": {
+        "dev": "nuxt",
+        "build": "nuxt build",
+        "start": "nuxt start",
+        "generate": "nuxt generate",
+        "test": "jest",
+        "deploy": "push-dir --dir=dist --branch=gh-pages"
+    },
+    "dependencies": {
+        "core-js": "^3.15.1",
+        "nuxt": "^2.15.7"
+    },
+    "devDependencies": {
+        "@vue/test-utils": "^1.2.1",
+        "babel-core": "7.0.0-bridge.0",
+        "babel-jest": "^27.0.5",
+        "jest": "^27.0.5",
+        "push-dir": "^0.4.1",
+        "vue-jest": "^3.0.4"
+    }
 }
