--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     },
     "dependencies": {
         "core-js": "^3.15.1",
-        "nuxt": "^2.15.7"
+        "nuxt": "^2.15.7",
+        "sass": "^1.43.3",
+        "sass-loader": "^12.2.0"
     },
     "devDependencies": {
         "@vue/test-utils": "^1.2.1",
