--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
         "sass-loader": "^10"
     },
     "devDependencies": {
+        "@nuxt/test-utils": "^0.2.2",
         "@vue/test-utils": "^1.2.1",
         "babel-core": "7.0.0-bridge.0",
         "babel-jest": "^27.0.5",
-        "jest": "^27.0.5",
+        "jest": "^27.3.1",
         "push-dir": "^0.4.1",
         "vue-jest": "^3.0.4"
     }
